Overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -847,6 +847,8 @@ input[type="submit"] {
   font-size: 18px;
   line-height: 24px;
   white-space: pre-line;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .prop-info-title {
